--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -21,3 +21,10 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+
+      - name: Setting up JDK 8
+        uses: actions/setup-java@v2
+        with:
+          java-version: '8'
+          architecture: 'x64'
+          distribution: 'adopt'
