--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -28,3 +28,6 @@ jobs:
           java-version: '8'
           architecture: 'x64'
           distribution: 'adopt'
+
+      - name: Setting up Redis
+        run: sudo redis-server /etc/redis/redis.conf --port 6379
