project-4 manual migration third functionality implementation

--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -30,4 +30,5 @@ jobs:
           distribution: 'adopt'
 
       - name: Setting up Redis
-        run: sudo redis-server /etc/redis/redis.conf --port 6379
+        run: |
+          sudo redis-server /etc/redis/redis.conf --port 6379
