project-4 manual migration 5th functionality implementation

--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -29,6 +29,5 @@ jobs:
           architecture: 'x64'
           distribution: 'adopt'
 
-      - name: Setting up Redis
-        run: |
-          sudo redis-server /etc/redis/redis.conf --port 6379
+      - name: setting up permissions for making Maven wrapper executable
+        run: chmod +x mvnw
