--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -32,5 +32,5 @@ jobs:
       - name: setting up permissions for making Maven wrapper executable
         run: chmod +x mvnw
 
-      - name: Setting up Redis
-        run: sudo redis-server /etc/redis/redis.conf --port 63
+      - name: Installing Redis
+        run: sudo apt-get install redis-server
