--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -32,3 +32,5 @@ jobs:
       - name: setting up permissions for making Maven wrapper executable
         run: chmod +x mvnw
 
+      - name: Installing Redis
+        run: sudo apt-get install redis-server
