--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -38,5 +38,5 @@ jobs:
       - name: Setting up Redis
         run: sudo redis-server /etc/redis/redis.conf --port 6379
 
-      - name: Build and test
-        run: ./mvnw -q test
+      - name: Run Maven wrapper for update and installing
+        run : ./mvnw -N io.takari:maven:wrapper -Dmaven=3.9.6
