--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -40,3 +40,6 @@ jobs:
 
       - name: Run Maven wrapper for update and installing
         run : ./mvnw -N io.takari:maven:wrapper -Dmaven=3.9.6
+
+      - name: Run test
+        run: ./mvnw -q test
