--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -12,11 +12,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    services:
-      redis:
-        image: redis
-        ports:
-          - 6379:6379
+#    services:
+#      redis:
+#        image: redis
+#        ports:
+#          - 6379:6379
 
     steps:
       - name: Checkout code
