--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -41,5 +41,5 @@ jobs:
       - name: Run Maven wrapper for update and installing
         run : ./mvnw -N io.takari:maven:wrapper -Dmaven=3.9.6
 
-      - name: Run test
-        run: ./mvnw -q test
+      - name: Uploading code coverage data to the Codecov service
+        run: bash <(curl -s https://codecov.io/bash)
