fixing the issue

--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -21,6 +21,8 @@ jobs:
           java-version: '8'
       #     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
       - run: chmod +x mvnw
+      - name: Installing Redis
+        run: sudo apt-get install redis-server
       - run: sudo redis-server /etc/redis/redis.conf --port 6379
       - run: "./mvnw -q test"
       - run: bash <(curl -s https://codecov.io/bash)
