fixing the maven run issue

--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -25,6 +25,8 @@ jobs:
         run: sudo apt-get install redis-server
 
       - run: sudo redis-server /etc/redis/redis.conf --port 6379
+      - name: Run Maven wrapper for update and installing
+        run: ./mvnw -N io.takari:maven:wrapper -Dmaven=3.9.6
       - run: "./mvnw -q test"
       - run: bash <(curl -s https://codecov.io/bash)
         if: "${{ success() }}"
