moved runs-on under the build

--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,7 +1,9 @@
-name: placeholder_Name
+name: gha2-results
 
 on:
-  pull_request
+  pull_request:
+    branches:
+      - branch-2
   push:
     branches:
       - branch-2
