--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -14,15 +14,11 @@ jobs:
       - name: checkout
         uses: actions/checkout@v3.5.0
 
-        with: path
+      - uses: actions/setup-java@v3.12.0
         with:
-          java-version:
-            ${{ matrix.java }}
-            1.8
-        with: key
-        with: java-version
-        uses: actions/checkout@version
-        uses: actions/setup-java@version
+          distribution: 'zulu'
+          java-version: '8'
+
         - name: set up jdk 1.8
           with:
             path: ~/.maven-
