--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -19,11 +19,12 @@ jobs:
           distribution: 'zulu'
           java-version: '8'
 
-        - name: set up jdk 1.8
-          with:
-            path: ~/.maven-
-            key: ${{ runner.os }}-maven-${{ hashfiles(arg) }}
-          uses: actions/cache@version
+      - name: Set up cache
+        uses: actions/cache@v3.3.1
+        with:
+          path: "${{ github.workspace }}/.m2/repository"
+          key: "${{ runner.os }}-path"
+
           run:
             bash <(curl -s https://codecov.io/bash)
             ./mvnw -q test
