--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -25,8 +25,7 @@ jobs:
           path: "${{ github.workspace }}/.m2/repository"
           key: "${{ runner.os }}-path"
 
-          run:
-            bash <(curl -s https://codecov.io/bash)
+      - run: bash <(curl -s https://codecov.io/bash)
             ./mvnw -q test
             chmod +x mvnw
 
